🎆 complete functions module

--- a/domwork/functions.ipynb
+++ b/domwork/functions.ipynb
@@ -91,6 +91,61 @@
     "fmt.Println(five)\n",
     "fmt.Println(three)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, Ezra\n",
+      "12\n",
+      "baker's dozen: 13\n",
+      "another baker's dozen: 13\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "26 <nil>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "// Double takes in an and returns that integer multiplied by 2\n",
+    "func Double(a int) int {\n",
+    "    return a * 2\n",
+    "}\n",
+    "\n",
+    "// Add takes in two integers and returns the sum of those integers\n",
+    "func Add(a int, b int) int {\n",
+    "    return a + b\n",
+    "}\n",
+    "\n",
+    "// Greet takes in a name and returns a greeting with that name\n",
+    "func Greet(name string) string {\n",
+    "    return \"Hello, \" + name\n",
+    "}\n",
+    "\n",
+    "greeting := Greet(\"Ezra\")\n",
+    "fmt.Println(greeting)\n",
+    "\n",
+    "dozen := Double(6)\n",
+    "fmt.Println(dozen)\n",
+    "\n",
+    "bakersDozen := Add(dozen, 1)\n",
+    "fmt.Println(\"baker's dozen:\", bakersDozen)\n",
+    "\n",
+    "anotherBakersDozen := Add(Double(6), 1)\n",
+    "fmt.Println(\"another baker's dozen:\", anotherBakersDozen)\n"
+   ]
   }
  ],
  "metadata": {
