🎆 complete dice rolling module

--- a/domwork/loops.ipynb
+++ b/domwork/loops.ipynb
@@ -300,16 +300,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "false\n",
+      "false\n",
+      "true\n",
+      "true\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "3"
+       "5 <nil>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,12 +332,29 @@
     "  \"time\"\n",
     ")\n",
     "\n",
-    "func roll(sides int) int {\n",
-    "  // rand.Seed(time.Now().UnixNano())\n",
-    "  return rand.Intn(sides) + 1\n",
-    "}\n",
+    "/*\n",
+    "create a program that can perform:\n",
+    "- dice rolls\n",
+    "- accept various configurations\n",
+    "- number of dice\n",
+    "- number of rolls and sides\n",
     "\n",
-    "roll(5)"
+    "Program should also be able to:\n",
+    "- snake eyes: when total of roll is two and the total dice is two\n",
+    "- lucky seven: when total of roll is seven and the total dice is two\n",
+    "- Even: when total of roll is even\n",
+    "- Odd: when total of roll is odd\n",
+    "\n",
+    "Configurations:\n",
+    "- number of dice\n",
+    "- number of rolls\n",
+    "- number of sides\n",
+    "*/\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
