🎆 complete structure module

--- a/domwork/structs.ipynb
+++ b/domwork/structs.ipynb
@@ -11,7 +11,110 @@
     "  - Each data point in the structure is called a field\n",
     "  - storing data in groups is more efficient\n",
     "- Possible to associate functionality with structures\n",
-    "  - Helps organize code and data\n"
+    "  - Helps organize code and data\n",
+    "\n",
+    "## Defining a struct\n",
+    "\n",
+    "```go\n",
+    "type Sample struct {\n",
+    "    field string\n",
+    "    x, y int\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "We use the `type` keyword to define a new type called `Sample`. The type is a struct. The struct has three fields: `field`, `x`, and `y`. The fields are of type `string`, `int`, and `int` respectively.\n",
+    "\n",
+    "## Instantiating a struct\n",
+    "\n",
+    "```go\n",
+    "data := Sample{\"word\", 1, 2}\n",
+    "\n",
+    "data := Sample{\n",
+    "    field: \"word\",\n",
+    "    x: 1,\n",
+    "    y: 2,\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "## Default Values\n",
+    "\n",
+    "Any fields not indicated during instantiation will default to the respective zero-values of their types.\n",
+    "\n",
+    "```go\n",
+    "data := Sample{\n",
+    "    field: \"word\",\n",
+    "    x: 1,\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "> In this case, `data.y` will be `0`.\n",
+    "\n",
+    "## Accessing Fields\n",
+    "\n",
+    "```go\n",
+    "word := data.field\n",
+    "data.x = 3\n",
+    "```\n",
+    "\n",
+    "## Anonymous Structures\n",
+    "\n",
+    "- Inline structs created using `var` will have default values\n",
+    "- Shorthand version must have all fields specified\n",
+    "\n",
+    "```go\n",
+    "var sample struct {\n",
+    "    field string\n",
+    "    x, y int\n",
+    "}\n",
+    "\n",
+    "sample := struct {\n",
+    "  field string\n",
+    "  x, y int\n",
+    "} {\n",
+    "  \"hello\",\n",
+    "  1, 2,\n",
+    "}\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## What is a `struct`?\n",
+    "\n",
+    "In Go, a struct is a composite data type that groups together variables(called fields) under a single name. These variables can be of different types, making structs very versatile for data modeling, Here's a breakdown of what a struct is and its characteristics in Go:\n",
+    "\n",
+    "## Definition and Characteristics\n",
+    "\n",
+    "- **Grouping of Fields**: Structs allow you to combine fields of possibly different types into a single entity. This is useful for modeling real-world entities or complex data structures.\n",
+    "- **Type declaration**: A struct is declared with `struct` keyword, followed by a block of fields.\n",
+    "- **Fields**: Each field in a struct has a name and a type, Fields can be of any type, including other structs.\n",
+    "\n",
+    "## Why use structs?\n",
+    "\n",
+    "- **Data Modeling**: Structs are ideal for creating more complex data types that represent real-world entities. For example, a `Person` struct can be used to represent a person, with fields like `name`, `age`, `gender`, etc.\n",
+    "- **Organization**: They help in organizing and grouping related data together, making the code more readable and maintainable.\n",
+    "- **Method Attachment**: In Go, methods can be attached to structs. This allows you to define behaviors related to the data the struct represents. For example, a `Person` struct can have a `GetAge()` method that returns the age of the person.\n",
+    "\n",
+    "## Basic Syntax\n",
+    "\n",
+    "```go\n",
+    "type StructName struct {\n",
+    "  Field1 FieldType1\n",
+    "  Field2 FieldType2\n",
+    "  // ... more fields\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "### Example\n",
+    "\n",
+    "```go\n",
+    "type Person struct {\n",
+    "  Name, City String\n",
+    "  Age int\n",
+    "}\n",
+    "```\n"
    ]
   }
  ],
